src/oid4vci/issuer/snapshots/credibil_vc__oid4vci__issuer__credential__tests__claim_label_display_default.snap
---
source: src/oid4vci/types/credential.rs
assertion_line: 579
expression: "&default"
---
- CredentialSubject.address
- CredentialSubject.address.country
- CredentialSubject.address.locality
- CredentialSubject.address.region
- CredentialSubject.address.street_address
- CredentialSubject.email
- CredentialSubject.family_name
- CredentialSubject.given_name
