src/oid4vci/issuer/snapshots/credibil_vc__oid4vci__issuer__credential__tests__claim_label_display_en-NZ.snap
---
source: src/oid4vci/types/credential.rs
assertion_line: 540
expression: "&claims"
---
- Country
- Email
- Family name
- Given name
- Locality
- Region
- Residence
- Street Address
