src/oid4vci/issuer/snapshots/credibil_vc__oid4vci__issuer__credential__tests__credential_format.snap
---
source: src/oid4vci/types/credential.rs
assertion_line: 579
expression: "&deserialized"
---
format: jwt_vc_json
credential_definition:
  type:
    - VerifiableCredential
    - EmployeeIDCredential
proof:
  proof_type: jwt
  jwt: SomeJWT
