src/oid4vci/issuer/snapshots/credibil_vc__oid4vci__issuer__credential__tests__credential_identifier.snap
---
source: src/oid4vci/types/credential.rs
assertion_line: 300
expression: "&deserialized"
---
credential_identifier: EngineeringDegree2023
proof:
  proof_type: jwt
  jwt: SomeJWT
