src/oid4vci/issuer/snapshots/credibil_vc__oid4vci__issuer__credential__tests__multiple_proofs.snap
---
source: src/oid4vci/types/credential.rs
assertion_line: 370
expression: "&deserialized"
---
credential_identifier: EngineeringDegree2023
proofs:
  jwt:
    - SomeJWT1
    - SomeJWT2
